# Curso_Raspberry_Pi_PICO

./: PlantaFuzzy.fis  PlantaFuzzy1.slx  PlantaFuzzy1.slx.autosave  cvpwm2020a.slxc  pid_labview.vi  untitled.elf  untitled.fda  untitled.slx.autosave  untitled.slxc  untitled1.elf  untitled1.hex  untitled1.slxc  untitled_cgxe.mexw64
Criterios_C.X/: Configuracion.h  main.c
Ejemplo1_GPIO/: main.c
Ejemplo1_PiPicW/: CMakeLists.txt
Ejemplo1_PiPicW/main/: CMakeLists.txt  main.c
Ejemplo2_7Seg/: main.c
Ejemplo3_LCD/: main.c
Ejemplo4_Interrupciones/: CMakeLists.txt
Ejemplo5_Timer/: CMakeLists.txt
Ejemplo6_Timerv2/: CMakeLists.txt
Ejemplo7_Uart/: CMakeLists.txt
EjemploADC_PWM/: CMakeLists.txt
EjemploMulticore/: CMakeLists.txt
EjemploPID/: CMakeLists.txt
EjemploPID/main/: CMakeLists.txt  PID.c  main.c
Ejemplo_i2c_LCD/: CMakeLists.txt
SCAN_I2C/: scan.c
Templete/: CMakeLists.txt
ejemplos/: CMakeLists.txt  untitled.sublime-build
http_thb/: http_thb.ino
mqtt_thb/: mqtt_thb.ino
pico-touchscr-sdk-main/: CMakeLists.txt  test.c
spi/: CMakeLists.txt
uart/: CMakeLists.txt  SERIAL.vi
untitled1_ert_rtw/: BufferedSerial.dep  MW_AnalogInput.dep  MW_AnalogOutput.dep  MW_Timer.dep  MW_target_hardware_resources.h  SysTickScheduler.dep  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  ert_main.c  ert_main.dep  ext_mode_types.h  m3m4m4f_multitasking.dep  multiword_types.h  mw_mbed_interface.dep  mw_mbed_pintable_interface.dep  rtiostream_serial_dma.dep  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  stm32f7xx_init_board.dep  sys_arch.dep  untitled1.bat  untitled1.c  untitled1.dep  untitled1.h  untitled1.map  untitled1.mk  untitled1.rsp  untitled1_comp.rsp  untitled1_data.c  untitled1_data.dep  untitled1_private.h  untitled1_types.h  xcp.dep  (+14 more)
(+138 files in other folders)
